--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -1,41 +1,4 @@
-.App {
-    text-align: center;
-}
-
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
+@import "styles/normalize";
 
 .status {
     display: inline-block;
@@ -52,7 +15,7 @@
 }
 
 .done {
-    background: greenyellow;
+    background: green;
 }
 
 ul {
@@ -61,14 +24,14 @@ ul {
     padding-left: 0;
 }
 
-.todo-item{
+.todo-item {
     display: flex;
     align-items: stretch;
     line-height: 22px;
     justify-content: center;
 }
 
-.todo-item button{
+.todo-item button {
     opacity: 0;
     transition: opacity 400ms;
 }
@@ -76,5 +39,3 @@ ul {
 .todo-item:hover button {
     opacity: 1;
 }
-
-
